fix longer code tag adding white space to the right in mobile by breaking word

--- a/assets/scss/large.scss
+++ b/assets/scss/large.scss
@@ -3,6 +3,8 @@
 @import "10.settings/fonts";
 @import "10.settings/breakpoints";
 @import "10.settings/animations";
+@import "10.settings/media.mixin";
+$media-queries: true;
 
 /* Reset problematic defaults */ 
 @import "15.resets/reset";
